<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group
            android:id="@+id/menu_0"
            android:checkableBehavior="single">

        <item
                android:id="@+id/nav_sign_in_out"
                android:title="@string/menu_sign_in" />

    </group>

    <group
            android:id="@+id/menu_1"
            android:checkableBehavior="single">

        <item
                android:id="@+id/nav_dashboard"
                android:title="@string/menu_dashboard"/>

    </group>

    <group
            android:id="@+id/menu_2"
            android:checkableBehavior="single">
        <item
                android:id="@+id/nav_market_prices"
                android:icon="@drawable/half_star"
                android:title="@string/menu_market_prices"/>
        <item
                android:id="@+id/nav_tax_calculator"
                android:icon="@drawable/half_star"
                android:title="@string/menu_tax_calculator"/>
        <item
                android:id="@+id/nav_trade_info"
                android:icon="@drawable/half_star"
                android:title="@string/menu_trade_info"/>
        <item
                android:id="@+id/nav_exchange_rates"
                android:icon="@drawable/half_star"
                android:title="@string/menu_exchange_rates"/>

    </group>

    <group
            android:id="@+id/menu_3"
            android:checkableBehavior="none">

        <item
                android:id="@+id/nav_marketplace"
                android:title="@string/menu_marketplace"/>
        <item
                android:id="@+id/nav_report"
                android:title="@string/menu_report" />
        <item
                android:id="@+id/nav_help"
                android:title="@string/menu_help" />

    </group>


</menu>