<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".fragment.AboutFragment"
            android:background="@color/colorPrimaryDark">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="220dp"
                    android:src="@drawable/i_about_header"
                    android:scaleType="centerCrop"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:paddingTop="24dp"
                    android:paddingBottom="24dp"
                    android:background="@color/colorInformation"
                    android:text="Our mission is to empower cross-border traders to exercise their rights as citizens of the EAC – able to trade legally, safely and profitably across borders."
                    android:textColor="@color/colorText"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:gravity="center"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:paddingTop="24dp"
                    android:paddingBottom="24dp"
                    android:text="@string/about_sauti"
                    android:textStyle="bold"
                    android:textSize="42sp"
                    android:textColor="@color/colorText"/>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:layout_marginBottom="24dp"
                    android:orientation="horizontal">

                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="18dp"
                        android:layout_gravity="center"
                        android:src="@drawable/vd_about_1"
                        android:tint="@color/colorAboutImage"/>

                <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/about_text_header_1"
                            android:textStyle="bold"
                            android:textSize="14sp"
                            android:textColor="@color/colorText"/>

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/about_text_1"
                            android:textSize="14sp"
                            android:textColor="@color/colorText"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:layout_marginBottom="24dp"
                    android:orientation="horizontal">

                <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1">

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/about_text_header_2"
                            android:textStyle="bold"
                            android:textSize="14sp"
                            android:textColor="@color/colorText"/>

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/about_text_2"
                            android:textSize="14sp"
                            android:textColor="@color/colorText"/>

                </LinearLayout>

                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="18dp"
                        android:layout_gravity="center"
                        android:src="@drawable/vd_about_2"
                        android:tint="@color/colorAboutImage"/>

            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:layout_marginBottom="24dp"
                    android:orientation="horizontal">

                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="18dp"
                        android:layout_gravity="center"
                        android:src="@drawable/vd_about_3"
                        android:tint="@color/colorAboutImage"/>

                <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/about_text_header_3"
                            android:textStyle="bold"
                            android:textSize="14sp"
                            android:textColor="@color/colorText"/>

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/about_text_3"
                            android:textSize="14sp"
                            android:textColor="@color/colorText"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:layout_marginBottom="46dp"
                    android:orientation="horizontal">

                <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1">

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/about_text_header_4"
                            android:textStyle="bold"
                            android:textSize="14sp"
                            android:textColor="@color/colorText"/>

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/about_text_4"
                            android:textSize="14sp"
                            android:textColor="@color/colorText"/>

                </LinearLayout>

                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="18dp"
                        android:layout_gravity="center"
                        android:src="@drawable/vd_about_4"
                        android:tint="@color/colorAboutImage"/>

            </LinearLayout>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_attribution_fontawesome"
                    android:textSize="12sp"
                    android:textColor="@color/colorText"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:layout_marginBottom="12dp"/>

        </LinearLayout>

    </ScrollView>

</FrameLayout>