<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".fragment.ReportFragment"
            tools:showIn="@layout/tool_app_bar_report">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp"
                android:background="?detailsBackgroundColor">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Contact Sauti"
                    android:textStyle="bold"
                    android:textSize="18sp"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Call/SMS/Whatsapp Sauti:\nKenya +254 708 807 824\nUganda +256 756 547 937"
                    android:textStyle="bold"
                    android:textSize="16sp"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="20dp"
                android:background="?searchLayoutBackground">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Report Form"
                    android:textSize="24sp"
                    android:textStyle="bold"/>

            <TextView
                    android:id="@+id/t_we_will_now_ask_some_questions_about_your_border_experience"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/we_will_now_ask_some_questions_about_your_border_experience"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="40dp"/>

            <ViewSwitcher
                    android:id="@+id/vs_borders_loading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginBottom="40dp">

                    <TextView
                            android:id="@+id/t_which_border_did_you_cross"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/which_border_did_you_cross"
                            android:textSize="18sp"
                            android:layout_marginBottom="16dp"/>

                    <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                        <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="40dp"
                                android:src="@drawable/search_spinner_background"/>

                        <Spinner
                                android:id="@+id/s_borders"
                                android:layout_width="match_parent"
                                android:layout_height="40dp"
                                android:backgroundTint="#2e2e2e">
                        </Spinner>

                    </FrameLayout>

                </LinearLayout>

                <ProgressBar
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

            </ViewSwitcher>

            <LinearLayout
                    android:id="@+id/ll_experience"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                <TextView
                        android:id="@+id/t_did_you_have_a_good_experience"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/did_you_have_a_good_experience"
                        android:textSize="18sp"
                        android:layout_marginBottom="12dp"/>

                <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="40dp">

                    <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal">

                        <com.google.android.material.button.MaterialButton
                                android:id="@+id/b_yes"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/yes"
                                android:textAllCaps="false"
                                android:textSize="24sp"
                                android:textStyle="bold"
                                android:textColor="@color/colorButtonResponseText"
                                android:backgroundTint="@color/colorButtonHasGoodExperienceNotSelected"
                                android:layout_marginEnd="50dp"/>

                        <com.google.android.material.button.MaterialButton
                                android:id="@+id/b_no"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/no"
                                android:textAllCaps="false"
                                android:textSize="24sp"
                                android:textStyle="bold"
                                android:textColor="@color/colorButtonResponseText"
                                android:backgroundTint="@color/colorButtonHasGoodExperienceNotSelected"/>

                    </LinearLayout>

                </FrameLayout>

            </LinearLayout>

            <ViewSwitcher
                    android:id="@+id/vs_submit_loading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <com.google.android.material.button.MaterialButton
                        android:id="@+id/b_submit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Submit"
                        android:textSize="24sp"
                        android:textAllCaps="false"
                        android:textStyle="bold"
                        android:textColor="@color/colorText"
                        android:backgroundTint="@color/colorAccent"/>

                <ProgressBar
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

            </ViewSwitcher>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>